added and formatted headers

--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
         <title>My Website</title>
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <h1 id = title>Macarons</h1>
+        <h3 id = subtitle>Made with Love</h3>
+        
+        <h4 id = classic class = flavors>Classic Flavors</h4>
+
+        <h4 id = fruit class = flavors>Fruit Flavors</h4>
+
+        <h4 if = fun class = flavors>Fun Flavors</h4>
+
         <script src="script.js"></script>
+
+
     </body>
 </html>
