Added header images

--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
         <title>My Website</title>
     </head>
     <body>
+        <div id = macaronPlates>
+            <img src = "Images/Raspberry Plate.jpg" alt = "Plate of Raspberry Macarons" width = 33%>
+            <img src ="Images/Vanilla Plate.jpg" alt = "Plate of Vanilla Macarons" width = 33%>
+            <img src = "Images/Lemon Plate.jpg" alt = "Plate of Lemon Macarons" width = 33%>
+        </div>
+
         <h1 id = title>Macarons</h1>
         <h3 id = subtitle>Made with Love</h3>
         
+
+
         <h4 id = classic class = flavors>Classic Flavors</h4>
 
         <h4 id = fruit class = flavors>Fruit Flavors</h4>
