Added photos and styling to flavor sections

--- a/index.html
+++ b/index.html
@@ -15,13 +15,40 @@
         <h3 id = subtitle>Made with Love</h3>
         
 
+        <div id = allFlavors>
+            <div id = classicSection class = flavorSection>   
+                <h4 id = classicHeader class = flavorTitle>Classic Flavors</h4>
+                <div id = classicMacs class = macPhotos>
+                    <img src = "Images/Vanilla.jpg" alt = "Vanilla macaron" height = 200px>
+                    <img src = "Images/Pistachio.jpg" alt = "Pistachio macaron" height = 200px>
+                    <img src = "Images/Salted Caramel.jpg" alt = "Salted caramel macaron" height = 200px>
+                    <img src = "Images/Red Velvet.jpg" alt = "Red velvet macaron" height = 200px>
+                </div>
+            </div>
 
-        <h4 id = classic class = flavors>Classic Flavors</h4>
+            <div id = fruitSection class = flavorSection>
+                <h4 id = fruitHeader class = flavorTitle>Fruit Flavors</h4>
+                <div id = fruitMacs class = macPhotos>
+                    <img src = "Images/Lemon.jpg" alt = "Lemon macaron" height = 200px>
+                    <img src = "Images/Raspberry.jpg" alt = "Raspberry macaron" height = 200px>
+                    <img src = "Images/Lemon Cranberry.jpg" alt = "Lemon cranberry macaron" height = 200px>
+                    <img src = "Images/Blackberry.jpg" alt = "Blackberry macaron" height = 200px>
+                    <img src = "Images/Pistachio Grapefruit.jpg" alt = "Pistachio grapefruit macaron" height = 200px>
+                </div>
+            </div>
 
-        <h4 id = fruit class = flavors>Fruit Flavors</h4>
+            <div id = funSection class = flavorSection>
+                <h4 id = funHeader class = flavorTitle>Fun Flavors</h4>
+                <div id = funMacs class = macPhotos>
+                    <img src = "Images/Butterbeer.jpg" alt = "Butterbeer macaron" height = 200px>
+                    <img src = "Images/Blueberry Cheesecake.jpg" alt = "Blueberry cheesecake macaron" height = 200px>
+                    <img src = "Images/Coffee & Bailey's.jpg" alt = "Coffee & Bailey's macaron" height = 200px>
+                    <img src = "Images/Mint Chocolate.jpg" alt = "Mint chocolate macaron" height = 200px>
+                    <img src = "Images/Tiramisu.jpg" alt = "Tiramisu macaron" height = 200px>
+                </div>
+            </div>
 
-        <h4 if = fun class = flavors>Fun Flavors</h4>
-
+        </div>    
         <script src="script.js"></script>
 
 
