--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>My Website</title>
     </head>
     <body>
+        
         <div id = macaronPlates>
             <img src = "Images/Raspberry Plate.jpg" alt = "Plate of Raspberry Macarons" width = 33%>
             <img src ="Images/Vanilla Plate.jpg" alt = "Plate of Vanilla Macarons" width = 33%>
@@ -19,38 +20,37 @@
             <div id = classicSection class = flavorSection>   
                 <h4 id = classicHeader class = flavorTitle>Classic Flavors</h4>
                 <div id = classicMacs class = macPhotos>
-                    <img src = "Images/Vanilla.jpg" alt = "Vanilla macaron" height = 200px>
-                    <img src = "Images/Pistachio.jpg" alt = "Pistachio macaron" height = 200px>
-                    <img src = "Images/Salted Caramel.jpg" alt = "Salted caramel macaron" height = 200px>
-                    <img src = "Images/Red Velvet.jpg" alt = "Red velvet macaron" height = 200px>
+                    <span class = indMacImage><img id = "Vanilla" src = "Images/Vanilla.jpg" alt = "Vanilla macaron" height = 200px></span>
+                    <span class = indMacImage><img id = Pistachio src = "Images/Pistachio.jpg" alt = "Pistachio macaron" height = 200px></span>
+                    <span class = indMacImage><img id = "Salted Caramel" src = "Images/Salted Caramel.jpg" alt = "Salted caramel macaron" height = 200px></span>
+                    <span class = indMacImage><img id = "Red Velvet" src = "Images/Red Velvet.jpg" alt = "Red velvet macaron" height = 200px></span>
                 </div>
             </div>
 
             <div id = fruitSection class = flavorSection>
                 <h4 id = fruitHeader class = flavorTitle>Fruit Flavors</h4>
                 <div id = fruitMacs class = macPhotos>
-                    <img src = "Images/Lemon.jpg" alt = "Lemon macaron" height = 200px>
-                    <img src = "Images/Raspberry.jpg" alt = "Raspberry macaron" height = 200px>
-                    <img src = "Images/Lemon Cranberry.jpg" alt = "Lemon cranberry macaron" height = 200px>
-                    <img src = "Images/Blackberry.jpg" alt = "Blackberry macaron" height = 200px>
-                    <img src = "Images/Pistachio Grapefruit.jpg" alt = "Pistachio grapefruit macaron" height = 200px>
+                    <img id = Lemon src = "Images/Lemon.jpg" alt = "Lemon macaron" height = 200px>
+                    <img id = Raspberry src = "Images/Raspberry.jpg" alt = "Raspberry macaron" height = 200px>
+                    <img id = "Lemon Cranberry" src = "Images/Lemon Cranberry.jpg" alt = "Lemon cranberry macaron" height = 200px>
+                    <img id = Blackberry src = "Images/Blackberry.jpg" alt = "Blackberry macaron" height = 200px>
+                    <img id = "Pistachio Grapefruit" src = "Images/Pistachio Grapefruit.jpg" alt = "Pistachio grapefruit macaron" height = 200px>
                 </div>
             </div>
 
             <div id = funSection class = flavorSection>
                 <h4 id = funHeader class = flavorTitle>Fun Flavors</h4>
                 <div id = funMacs class = macPhotos>
-                    <img src = "Images/Butterbeer.jpg" alt = "Butterbeer macaron" height = 200px>
-                    <img src = "Images/Blueberry Cheesecake.jpg" alt = "Blueberry cheesecake macaron" height = 200px>
-                    <img src = "Images/Coffee & Bailey's.jpg" alt = "Coffee & Bailey's macaron" height = 200px>
-                    <img src = "Images/Mint Chocolate.jpg" alt = "Mint chocolate macaron" height = 200px>
-                    <img src = "Images/Tiramisu.jpg" alt = "Tiramisu macaron" height = 200px>
+                    <img id = Butterbeer src = "Images/Butterbeer.jpg" alt = "Butterbeer macaron" height = 200px>
+                    <img id = "Blueberry Cheesecake" src = "Images/Blueberry Cheesecake.jpg" alt = "Blueberry cheesecake macaron" height = 200px>
+                    <img id = "Coffee & Bailey's" src = "Images/Coffee & Bailey's.jpg" alt = "Coffee & Bailey's macaron" height = 200px>
+                    <img id = "Mint Chocolate" src = "Images/Mint Chocolate.jpg" alt = "Mint chocolate macaron" height = 200px>
+                    <img id = Tiramisu src = "Images/Tiramisu.jpg" alt = "Tiramisu macaron" height = 200px>
                 </div>
             </div>
 
         </div>    
+
         <script src="script.js"></script>
-
-
     </body>
 </html>
