--- a/index.html
+++ b/index.html
@@ -6,49 +6,137 @@
     </head>
     <body>
         
-        <div id = macaronPlates>
+        <div id = "macaronPlates">
             <img src = "Images/Raspberry Plate.jpg" alt = "Plate of Raspberry Macarons" width = 33%>
             <img src ="Images/Vanilla Plate.jpg" alt = "Plate of Vanilla Macarons" width = 33%>
             <img src = "Images/Lemon Plate.jpg" alt = "Plate of Lemon Macarons" width = 33%>
         </div>
 
-        <h1 id = title>Macarons</h1>
-        <h3 id = subtitle>Made with Love</h3>
-        
+        <h1 id = "title">Macarons</h1>
+        <h3 id = "subtitle">Made with Love</h3>
 
-        <div id = allFlavors>
-            <div id = classicSection class = flavorSection>   
-                <h4 id = classicHeader class = flavorTitle>Classic Flavors</h4>
-                <div id = classicMacs class = macPhotos>
-                    <span class = indMacImage><img id = "Vanilla" src = "Images/Vanilla.jpg" alt = "Vanilla macaron" height = 200px></span>
-                    <span class = indMacImage><img id = Pistachio src = "Images/Pistachio.jpg" alt = "Pistachio macaron" height = 200px></span>
-                    <span class = indMacImage><img id = "Salted Caramel" src = "Images/Salted Caramel.jpg" alt = "Salted caramel macaron" height = 200px></span>
-                    <span class = indMacImage><img id = "Red Velvet" src = "Images/Red Velvet.jpg" alt = "Red velvet macaron" height = 200px></span>
+        <div id = break>
+            <img id = "heart" src = "Images/heart_icon.png" alt = "Heart icon" height = 25px>
+        </div>
+
+        <div id = "allFlavors">
+            <div id = "classicSection" class = "flavorSection">   
+                <h4 id = "classicHeader" class = "flavorTitle">Classic Flavors</h4>
+                <div id = "classicMacs" class = "macPhotos">
+                    <div class = "container">
+                        <img src = "Images/Vanilla.jpg" alt = "Vanilla macaron" height = 200px>
+                        <div class = "overlay">
+                            <div class = "description">Vanilla</div>
+                        </div>
+                    </div>
+                    <div class = "container">
+                        <img id = "pistachio" src = "Images/Pistachio.jpg" alt = "Pistachio macaron" height = 200px>
+                        <div class = "overlay">
+                            <div class = "description">Pistachio</div>
+                        </div>
+                    </div>
+                    <div class = "container">
+                        <img id = "saltedCaramel" src = "Images/Salted Caramel.jpg" alt = "Salted caramel macaron" height = 200px>
+                        <div class = "overlay">
+                            <div class = "description">Salted Caramel</div>
+                        </div>
+                    </div>
+                    <div class = "container">
+                        <img id = "mintChocolate" src = "Images/Mint Chocolate.jpg" alt = "Mint chocolate macaron" height = 200px>
+                        <div class = "overlay">
+                            <div class = "description">Mint Chocolate</div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
-            <div id = fruitSection class = flavorSection>
-                <h4 id = fruitHeader class = flavorTitle>Fruit Flavors</h4>
-                <div id = fruitMacs class = macPhotos>
-                    <img id = Lemon src = "Images/Lemon.jpg" alt = "Lemon macaron" height = 200px>
-                    <img id = Raspberry src = "Images/Raspberry.jpg" alt = "Raspberry macaron" height = 200px>
-                    <img id = "Lemon Cranberry" src = "Images/Lemon Cranberry.jpg" alt = "Lemon cranberry macaron" height = 200px>
-                    <img id = Blackberry src = "Images/Blackberry.jpg" alt = "Blackberry macaron" height = 200px>
-                    <img id = "Pistachio Grapefruit" src = "Images/Pistachio Grapefruit.jpg" alt = "Pistachio grapefruit macaron" height = 200px>
+            <div id = "fruitSection" class = "flavorSection">
+                <h4 id = "fruitHeader" class = "flavorTitle">Fruit Flavors</h4>
+                <div id = "fruitMacs" class = "macPhotos">
+                    <div class = "container">
+                        <img id = "lemon" src = "Images/Lemon.jpg" alt = "Lemon macaron" height = 200px>
+                        <div class = "overlay">
+                            <div class = "description">Lemon</div>
+                        </div>
+                    </div>
+                    <div class = "container">
+                        <img id = "raspberry" src = "Images/Raspberry.jpg" alt = "Raspberry macaron" height = 200px>
+                        <div class = "overlay">
+                            <div class = "description">Raspberry</div>
+                        </div>
+                    </div>
+                    <div class = "container">
+                        <img id = "lemonCranberry" src = "Images/Lemon Cranberry.jpg" alt = "Lemon cranberry macaron" height = 200px>
+                        <div class = "overlay">
+                            <div class = "description">Lemon Cranberry</div>
+                        </div>
+                    </div>
+                    <div class = "container">
+                        <img id = "blackberry" src = "Images/Blackberry.jpg" alt = "Blackberry macaron" height = 200px>
+                        <div class = "overlay">
+                            <div class = "description">Blackberry</div>
+                        </div>
+                    </div>
+            </div>
+
+            <div id = "funSection" class = "flavorSection">
+                <h4 id = "funHeader" class = "flavorTitle">Fun Flavors</h4>
+                <div id = "funMacs" class = "macPhotos">
+                    <div class = "container">
+                        <img id = "butterbeer" src = "Images/Butterbeer.jpg" alt = "Butterbeer macaron" height = 200px>
+                        <div class = "overlay">
+                            <div class = "description">Butterbeer</div>
+                        </div>
+                    </div>
+                    <div class = "container">
+                        <img id = "blueberryCheesecake" src = "Images/Blueberry Cheesecake.jpg" alt = "Blueberry cheesecake macaron" height = 200px>
+                        <div class = "overlay">
+                            <div class = "description">Blueberry Cheesecake</div>
+                        </div>
+                    </div>
+                    <div class = "container">
+                        <img id = "coffeeBaileys" src = "Images/Coffee & Bailey's.jpg" alt = "Coffee & Bailey's macaron" height = 200px>
+                        <div class = "overlay">
+                            <div class = "description">Coffee & Bailey's</div>
+                        </div>
+                    </div>
+                    <div class = "container">
+                        <img id = "pistachioGrapefruit" src = "Images/Pistachio Grapefruit.jpg" alt = "Pistachio grapefruit macaron" height = 200px>
+                        <div class = "overlay">
+                            <div class = "description">Pistachio Grapefruit</div>
+                        </div> 
+                    </div>
                 </div>
             </div>
 
-            <div id = funSection class = flavorSection>
-                <h4 id = funHeader class = flavorTitle>Fun Flavors</h4>
-                <div id = funMacs class = macPhotos>
-                    <img id = Butterbeer src = "Images/Butterbeer.jpg" alt = "Butterbeer macaron" height = 200px>
-                    <img id = "Blueberry Cheesecake" src = "Images/Blueberry Cheesecake.jpg" alt = "Blueberry cheesecake macaron" height = 200px>
-                    <img id = "Coffee & Bailey's" src = "Images/Coffee & Bailey's.jpg" alt = "Coffee & Bailey's macaron" height = 200px>
-                    <img id = "Mint Chocolate" src = "Images/Mint Chocolate.jpg" alt = "Mint chocolate macaron" height = 200px>
-                    <img id = Tiramisu src = "Images/Tiramisu.jpg" alt = "Tiramisu macaron" height = 200px>
+            <div id = "specialtySection" class = "flavorSection">
+                <h4 id = "specialtyHeader" class = "flavorTitle">Specialty Flavors</h4>
+                <div id = "specialtyMacs" class = "macPhotos">
+                    <div class = "container">
+                        <img id = "caramelPecan" src = "Images/Caramel Pecan.jpg" alt = "Caramel pecan macaron" height = 200px>
+                        <div class = "overlay">
+                            <div class = "description">Caramel Pecan</div>
+                        </div>
+                    </div>
+                    <div class = "container">
+                        <img id = "cremeBrulee" src = "Images/Creme Brulee.jpg" alt = "Creme brulee macaron" height = 200px>
+                        <div class = "overlay">
+                            <div class = "description">Creme Brulee</div>
+                        </div>
+                    </div>
+                    <div class = "container">
+                        <img id = "redVelvet" src = "Images/Red Velvet.jpg" alt = "Red velvet macaron" height = 200px>
+                        <div class = "overlay">
+                            <div class = "description">Red Velvet</div>
+                        </div>
+                    </div>
+                    <div class = "container">
+                        <img id = "tiramisu" src = "Images/Tiramisu.jpg" alt = "Tiramisu macaron" height = 200px>
+                        <div class = "overlay">
+                            <div class = "description">Tiramisu</div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-
         </div>    
 
         <script src="script.js"></script>
