--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="style.css">
-        <title>My Website</title>
+        <title>Macaron Website</title>
     </head>
     <body>
         
