--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                             <div class = "description">Blackberry</div>
                         </div>
                     </div>
+                </div>
             </div>
 
             <div id = "funSection" class = "flavorSection">
